compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__echo__echo_with_complex_expression_as_a_message.snap
---
source: compiler-core/src/erlang/tests/echo.rs
expression: "\npub fn main() {\n  echo 1 as case name() {\n    \"Giacomo\" -> \"hello Jak!\"\n    _ -> \"hello!\"\n  }\n}\n\nfn name() { \"Giacomo\" }\n"
---
----- SOURCE CODE

pub fn main() {
  echo 1 as case name() {
    "Giacomo" -> "hello Jak!"
    _ -> "hello!"
  }
}

fn name() { "Giacomo" }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 9).
-spec name() -> binary().
name() ->
    <<"Giacomo"/utf8>>.

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(1, case name() of
        <<"Giacomo"/utf8>> ->
            <<"hello Jak!"/utf8>>;

        _ ->
            <<"hello!"/utf8>>
    end, 3).

% ...omitted code from `templates/echo.erl`...
